<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">



    <EditText
        android:id="@+id/addinputname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Item Name"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/addinputQtyMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="-"
        android:textSize="22sp"
        android:onClick="QuantityMinus"/>

    <EditText
        android:id="@+id/addinputQTYonHand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Quantity on Hand"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_weight="6" />

    <Button
        android:id="@+id/addinputQtyPlus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="+"
        android:textSize="22sp"
        android:onClick="QuantityPlus"/>


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/price"/>

    <EditText
        android:id="@+id/addinputPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="3"
        android:inputType="numberDecimal" />

</LinearLayout>

    <RadioGroup
        android:id="@+id/addinputRadioISSUE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/addinputARMYISSUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Army Issue"
            android:layout_marginLeft="22dp"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/addinputPERSONAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Personal Property"
            android:layout_weight="1"
            android:layout_marginRight="22dp"/>

    </RadioGroup>



    <Spinner
        android:id="@+id/current_location_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1"
        android:scaleY="1.3"
        android:spinnerMode="dropdown"
        android:layout_marginTop="40dp"
        android:prompt="@string/locationspinnerprompt"


        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/image_display"
    android:src="@drawable/plussign"
    android:onClick="addImage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddPicture"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"/>



    </LinearLayout>

    <Button
        android:id="@+id/addinputSaveEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/SaveItem"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:onClick="SaveEntry"
        android:layout_marginTop="22dp"/>

    <Button
        android:id="@+id/addinputOrderItem"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/OrderItem"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:onClick="OrderItem"/>

    <Button
        android:id="@+id/addinputDeleteEntry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/DeleteItem"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:onClick="ConfirmDeleteEntry"/>



</LinearLayout>